--- a/CONP_main_data_documentation.htm
+++ b/CONP_main_data_documentation.htm
@@ -19,7 +19,7 @@ Full details of the schema can be found <a href="../DATS_fields.xlsx">here</a>. 
 
 <h2>2. Data files</h2>
 
-CONP stores some datsets locally and provides access to others hosted at external resources.  We use the DataLad and GitAnnex software tools to manage data storage and access to external data.  This system allows users to construct links to datasets at locations of their choice, and for users to download only the files of particular interest to them from any given dataset.
+CONP stores some datasets locally and provides access to others hosted at external resources.  We use the DataLad and GitAnnex software tools to manage data storage and access to external data.  This system allows users to construct links to datasets at locations of their choice, and for users to download only the files of particular interest to them from any given dataset.
 
 A technical description of the installation and use of DataLad/GitAnnex to upload and download data can be found <a href="../datalad_dataset_addition_procedure.md">here</a>.
 
