--- a/CONP_main_data_documentation.htm
+++ b/CONP_main_data_documentation.htm
@@ -6,7 +6,7 @@
 
 We use the DATS.json file format to store metadata about CONP datasets. DATS.json is a flexible machine-readable structure allowing for sophisticated representation of a wide range of different types of datasets, from neuroimaging to genomics.  A DATS.json file must be prepared for each dataset.
 
-The CONP DATS.json schema includes:
+The CONP DATS.json schema includes the following required fields:
 
 - Dataset title and description
 - Creators of the dataset
@@ -15,7 +15,7 @@ The CONP DATS.json schema includes:
 - Keywords and specification of data type
 
 
-Full details of the schema can be found <a href="../DATS_fields.xlsx">here</a>.  The example DATS.json file for the 1000 Genomes Project <a href="https://github.com/emmetaobrien/1000GenomesProject/blob/master/DATS.json">here</a> can be used as a template.  An interface allowing users to fill in required fields online is under development <a href="https://dats-creator.herokuapp.com/">here</a>.
+The schema also includes many other recommended and optional fields.  Full details can be found <a href="../DATS_fields.xlsx">here</a>.  The example DATS.json file for the 1000 Genomes Project <a href="https://github.com/emmetaobrien/1000GenomesProject/blob/master/DATS.json">here</a> can be used as a template.  An interface allowing users to fill in required fields online is under development <a href="https://dats-creator.herokuapp.com/">here</a>.
 
 <h2>2. Data files</h2>
 
