Updating CONP_main_data_documentation
Adding a link to the DATS dataset schema.

--- a/CONP_main_data_documentation.htm
+++ b/CONP_main_data_documentation.htm
@@ -15,7 +15,7 @@ The CONP DATS.json schema includes the following required fields:
 - Keywords and specification of data type
 
 
-The schema also includes many other recommended and optional fields.  Full details can be found <a href="../DATS_fields.xlsx">here</a>.  The example DATS.json file for the 1000 Genomes Project <a href="https://github.com/emmetaobrien/1000GenomesProject/blob/master/DATS.json">here</a> can be used as a template.  An interface allowing users to fill in required fields online is under development <a href="https://dats-creator.herokuapp.com/">here</a>.
+The schema also includes many other recommended and optional fields.  The DATS dataset schema can be found <a href="https://github.com/biocaddie/DATS/blob/master/dataset_schema.json">here</a>, and details of CONP's expansions and descriptions of what to enter in each field <a href="../DATS_fields.xlsx">here</a>.  The example DATS.json file for the 1000 Genomes Project <a href="https://github.com/emmetaobrien/1000GenomesProject/blob/master/DATS.json">here</a> can be used as a template.  An interface allowing users to fill in required fields online is under development <a href="https://dats-creator.herokuapp.com/">here</a>.
 
 <h2>2. Data files</h2>
 
