--- a/CONP_main_data_documentation.htm
+++ b/CONP_main_data_documentation.htm
@@ -13,6 +13,12 @@ The CONP DATS.json schema includes the following required fields:
 - DOI or other unique identifier
 - License under which the dataset is distributed
 - Keywords and specification of data type
+- Version of the dataset
+- Format of primary data files in dataset
+- Total number of files in the dataset
+- Size of dataset and unit used (usually GB)
+- Web address for original dataset
+
 
 
 The schema also includes many other recommended and optional fields.  The DATS dataset schema can be found <a href="https://github.com/biocaddie/DATS/blob/master/dataset_schema.json">here</a>, and details of CONP's expansions and descriptions of what to enter in each field <a href="../CONP_DATS_fields.docx">here</a>.  The example DATS.json file for the 1000 Genomes Project <a href="https://github.com/emmetaobrien/1000GenomesProject/blob/master/DATS.json">here</a> can be used as a template.  An interface allowing users to fill in required fields online is under development <a href="https://dats-creator.herokuapp.com/">here</a>.
