--- a/CONP_main_data_documentation.htm
+++ b/CONP_main_data_documentation.htm
@@ -2,7 +2,16 @@
 
 <h1>Uploading data for CONP</h1>
 
-<h2>1. Metadata</h2>
+<h2>1. About the CONP</h2>
+
+Open neuroscience is a collective effort that requires extensive coordination between multiple organizations and across geographical boundaries to promote important discoveries and protect data value. The CONP Portal will provide infrastructure that will allow interoperability of neuroscience datasets across data modalities, timescales, and experimental models. The CONP platform will enable Canada’s basic neuroscientists and clinical researchers to: 
+- share phenotypic/genotypic data and methods in an unrestricted manner
+- create large-scale databases impossible to achieve within a single institution 
+- facilitate the use of advanced multivariate analytic strategies,
+- train the next generation of computational neuroscience researchers and,
+- disseminate the results to the global community.
+
+<h2>2. Metadata</h2>
 
 We use the DATS.json file format to store metadata about CONP datasets. DATS.json is a flexible machine-readable structure allowing for sophisticated representation of a wide range of different types of datasets, from neuroimaging to genomics.  A DATS.json file must be prepared for each dataset.
 
@@ -23,7 +32,7 @@ The CONP DATS.json schema includes the following required fields:
 
 The schema also includes many other recommended and optional fields.  The DATS dataset schema can be found <a href="https://github.com/datatagsuite/schema/blob/master/dataset_schema.json">here</a>, and details of CONP's expansions and descriptions of what to enter in each field <a href="./CONP_DATS_fields.md">here</a>.  The example DATS.json file for the 1000 Genomes Project <a href="https://github.com/conpdatasets/1000GenomesProject/blob/master/DATS.json">here</a> can be used as a template.  An interface allowing users to fill in required fields online is under development <a href="https://dats-creator.herokuapp.com/">here</a>.
 
-<h2>2. Data files</h2>
+<h2>3. Data files</h2>
 
 CONP stores some datasets locally and provides access to others hosted at external resources.  We use the DataLad and GitAnnex software tools to manage data storage and access to external data.  This system allows users to construct links to datasets at locations of their choice, and for users to download only the files of particular interest to them from any given dataset.
 
