[DATALAD] added content

--- a/CONP_main_data_documentation.htm
+++ b/CONP_main_data_documentation.htm
@@ -2,12 +2,15 @@
 <br><br>
 <h2>1. About the CONP</h2>
 <br>
-Open neuroscience is a collective effort that requires extensive coordination between multiple organizations and across geographical boundaries to promote important discoveries and protect data value. The CONP Portal will provide infrastructure that will allow interoperability of neuroscience datasets across data modalities, timescales, and experimental models. The CONP platform will enable Canada’s basic neuroscientists and clinical researchers to: 
-- share phenotypic/genotypic data and methods in an unrestricted manner
-- create large-scale databases impossible to achieve within a single institution 
-- facilitate the use of advanced multivariate analytic strategies,
-- train the next generation of computational neuroscience researchers and,
-- disseminate the results to the global community.
+Open neuroscience is a collective effort that requires extensive coordination between multiple organizations and across geographical boundaries to promote important discoveries and protect data value. The CONP Portal will provide infrastructure that will allow interoperability of neuroscience datasets across data modalities, timescales, and experimental models. The CONP platform will enable Canada’s basic neuroscientists and clinical researchers to:
+<br>
+<ul>
+<li>share phenotypic/genotypic data and methods in an unrestricted manner</li>
+<li>create large-scale databases impossible to achieve within a single institution</li>
+<li>facilitate the use of advanced multivariate analytic strategies</li>
+<li>train the next generation of computational neuroscience researchers and</li>
+<li>disseminate the results to the global community.</li>
+</ul>
 <br><br>
 <h2>2. Metadata</h2>
 <br>
