--- a/CONP_main_data_documentation.htm
+++ b/CONP_main_data_documentation.htm
@@ -37,5 +37,5 @@ The schema also includes many other recommended and optional fields.  The DATS d
 <br>
 CONP stores some datasets locally and provides access to others hosted at external resources.  We use the DataLad and GitAnnex software tools to manage data storage and access to external data.  This system allows users to construct links to datasets at locations of their choice, and for users to download only the files of particular interest to them from any given dataset.
 <br>
-A technical description of the installation and use of DataLad/GitAnnex to upload and download data can be found <a href="./datalad_dataset_addition_procedure.md">here</a>.
+A technical description of the installation and use of DataLad/GitAnnex to upload and download data can be found <a href="https://github.com/CONP-PCNO/conp-documentation/blob/master/datalad_dataset_addition_procedure.md">here</a>.
 
