[DATALAD] added content

--- a/CONP_main_data_documentation.htm
+++ b/CONP_main_data_documentation.htm
@@ -31,7 +31,7 @@ The CONP DATS.json schema includes the following required fields:
 <li>Web address for original dataset</li>
 </ul>
 <br>
-The schema also includes many other recommended and optional fields.  The DATS dataset schema can be found <a href="https://github.com/datatagsuite/schema/blob/master/dataset_schema.json">here</a>, and details of CONP's expansions and descriptions of what to enter in each field <a href="./CONP_DATS_fields.md">here</a>.  The example DATS.json file for the 1000 Genomes Project <a href="https://github.com/conpdatasets/1000GenomesProject/blob/master/DATS.json">here</a> can be used as a template.  An interface allowing users to fill in required fields online is under development <a href="https://dats-creator.herokuapp.com/">here</a>.
+The schema also includes many other recommended and optional fields.  The DATS dataset schema can be found <a href="https://github.com/CONP-PCNO/schema/blob/master/dataset_schema.json">here</a>, and details of CONP's expansions and descriptions of what to enter in each field <a href="https://github.com/CONP-PCNO/conp-documentation/blob/master/CONP_DATS_fields.md">here</a>.  The example DATS.json file for the 1000 Genomes Project <a href="https://github.com/conpdatasets/1000GenomesProject/blob/master/DATS.json">here</a> can be used as a template.  An interface allowing users to fill in required fields online is under development <a href="https://dats-creator.herokuapp.com/">here</a>.
 <br><br>
 <h2>3. Data files</h2>
 <br>
