--- a/CONP_main_data_documentation.htm
+++ b/CONP_main_data_documentation.htm
@@ -1,6 +1,6 @@
 <h1>Uploading data for CONP</h1>
 <br><br>
-<h2>1. About the CONP</h2>
+<h2>1. About CONP</h2>
 <br>
 Open neuroscience is a collective effort that requires extensive coordination between multiple organizations and across geographical boundaries to promote important discoveries and protect data value. The CONP Portal will provide infrastructure that will allow interoperability of neuroscience datasets across data modalities, timescales, and experimental models. The CONP platform will enable Canada’s basic neuroscientists and clinical researchers to:
 <br>
@@ -38,4 +38,3 @@ The schema also includes many other recommended and optional fields.  The DATS d
 CONP stores some datasets locally and provides access to others hosted at external resources.  We use the DataLad and GitAnnex software tools to manage data storage and access to external data.  This system allows users to construct links to datasets at locations of their choice, and for users to download only the files of particular interest to them from any given dataset.
 <br>
 A technical description of the installation and use of DataLad/GitAnnex to upload and download data can be found <a href="https://github.com/CONP-PCNO/conp-documentation/blob/master/datalad_dataset_addition_procedure.md">here</a>.
-
