--- a/CONP_main_data_documentation.htm
+++ b/CONP_main_data_documentation.htm
@@ -4,7 +4,7 @@
 <br>
 Open neuroscience is a collective effort that requires extensive coordination between multiple organizations and across geographical boundaries to promote important discoveries and protect data value. The CONP Portal will provide infrastructure that will allow interoperability of neuroscience datasets across data modalities, timescales, and experimental models. The CONP platform will enable Canada’s basic neuroscientists and clinical researchers to:
 <br>
-<ul>
+<ul style="list-style-type:disc;">
 <li>share phenotypic/genotypic data and methods in an unrestricted manner</li>
 <li>create large-scale databases impossible to achieve within a single institution</li>
 <li>facilitate the use of advanced multivariate analytic strategies</li>
@@ -18,7 +18,7 @@ We use the DATS.json file format to store metadata about CONP datasets. DATS.jso
 <br>
 The CONP DATS.json schema includes the following required fields:
 <br>
-<ul>
+<ul style="list-style-type:disc;">
 <li>Dataset title and description</li>
 <li>Creators of the dataset</li>
 <li>DOI or other unique identifier</li>
